--- a/core/static/estilos/estilo.css
+++ b/core/static/estilos/estilo.css
@@ -56,22 +56,79 @@ body{
 }
 #main-diario p{
     color:#A8A8A8;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+}
+#main-diario{
+    font-family: 'Inter', sans-serif;
+    font-size: 22px;   
+    color:#000;
 }
 .button-registrar a{
     color:#FF8D61;
+    text-decoration: none;
+}
+.button-registrar{
+    display: flex;
+    align-items: center;
+}
+.registros{
+    display: flex;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
 }
 .registros p{
     color: #A8A8A8;
 }
-#diario,
-#diario-2,
-#diario-3,
-#diario-4,
-#diario-5{
+.diario{
     display: flex;
+    gap: 46px;
+    width: 740px;
+}
+.container-registros{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 .dia-semana,
 .registros,
 .button-registrar{
     margin-bottom: 20px;
+}
+#conteudo-diario{
+    border-radius: 10px;
+    border: 1px solid #F4F3F3;
+    background:  #FFFFFF;
+    width: 824px;
+}
+#selecionado-semana,
+#selecionado-dia{
+    color: #0C9A61;
+}
+.dia-semana{
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    margin-bottom: 0px;
+}
+.data{
+    margin-top: 6px;
+}
+#datas,
+.datas{
+    margin-left: 62px;
+}
+.datas{
+    display: flex;
+    gap:33px;
+}
+.mes{
+    margin-left: 42px;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+}
+.linha-vertical{
+    width: 1px;
+    height: 51px;
+    background: #F4F3F3;
 }
