--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -33,40 +33,224 @@
               <label for="first">
                 <div class="informacoes-do-paciente">
                   <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
-                  Paciente 1 <i class="ph ph-caret-down"></i>
+                  Paciente 1 
                 </div>
+                <i class="ph ph-caret-down"></i>
               </label>
               <input type="radio" name="collapse" id="first" checked />
           
               <div class="content">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the
-                1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book.
+                <div class="informacoes-gerais-do-paciente">
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Nome</span>
+                    <span class="dados-do-cliente">Paciente 1</span>
+                  </div>
+                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Email</span>
+                    <span class="dados-do-cliente">paciente1@gmail.com</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">CPF</span>
+                    <span class="dados-do-cliente">123.456.789-00</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Whatsapp</span>
+                    <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
+                      <img src={% static 'imagens/icone-whatsapp.svg' %} alt="icone-whatsapp">
+                      Entrar em contato
+                    </a>
+                  </div>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Dieta</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+
+                  <button id="botao-criar-dieta">
+                    <i class="ph ph-plus"></i>
+                    <span>
+                      Criar dieta
+                    </span>
+                  </button>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Diário alimentar</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+                </div>
+
+                <div class="footer-collapse-pacientes">
+                  <button id="botao-editar">
+                    <i class="ph ph-pencil-simple-line"></i>
+                    Editar
+                  </button>
+                  <button id="botao-excluir">
+                    <i class="ph ph-trash"></i>
+                    Excluir
+                  </button>
+                </div>
+
               </div>
             </li>
           
             <li>
-              <label for="second">Paciente 2<i class="ph ph-caret-down"></i></label>
+              <label for="second">
+                <div class="informacoes-do-paciente">
+                  <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
+                  Paciente 2
+                </div>
+                <i class="ph ph-caret-down"></i>
+              </label>
               <input type="radio" name="collapse" id="second" />
           
               <div class="content">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the
-                1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book.
+                <div class="informacoes-gerais-do-paciente">
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Nome</span>
+                    <span class="dados-do-cliente">Paciente 1</span>
+                  </div>
+                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Email</span>
+                    <span class="dados-do-cliente">paciente1@gmail.com</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">CPF</span>
+                    <span class="dados-do-cliente">123.456.789-00</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Whatsapp</span>
+                    <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
+                      <img src={% static 'imagens/icone-whatsapp.svg' %} alt="icone-whatsapp">
+                      Entrar em contato
+                    </a>
+                  </div>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Dieta</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+
+                  <button id="botao-criar-dieta">
+                    <i class="ph ph-plus"></i>
+                    <span>
+                      Criar dieta
+                    </span>
+                  </button>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Diário alimentar</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+                </div>
+
+                <div class="footer-collapse-pacientes">
+                  <button id="botao-editar">
+                    <i class="ph ph-pencil-simple-line"></i>
+                    Editar
+                  </button>
+                  <button id="botao-excluir">
+                    <i class="ph ph-trash"></i>
+                    Excluir
+                  </button>
+                </div>
+
               </div>
             </li>
           
             <li>
-              <label for="third">Paciente 3 <i class="ph ph-caret-down"></i></label>
+              <label for="third">
+                <div class="informacoes-do-paciente">
+                  <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
+                  Paciente 3 
+                </div>
+                <i class="ph ph-caret-down"></i>
+              </label>
               <input type="radio" name="collapse" id="third" />
           
               <div class="content">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the
-                1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book.
+                <div class="informacoes-gerais-do-paciente">
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Nome</span>
+                    <span class="dados-do-cliente">Paciente 1</span>
+                  </div>
+                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Email</span>
+                    <span class="dados-do-cliente">paciente1@gmail.com</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">CPF</span>
+                    <span class="dados-do-cliente">123.456.789-00</span>
+                  </div>
+
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Whatsapp</span>
+                    <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
+                      <img src={% static 'imagens/icone-whatsapp.svg' %} alt="icone-whatsapp">
+                      Entrar em contato
+                    </a>
+                  </div>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Dieta</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+
+                  <button id="botao-criar-dieta">
+                    <i class="ph ph-plus"></i>
+                    <span>
+                      Criar dieta
+                    </span>
+                  </button>
+                </div>
+
+                <hr class="solid">
+
+                <div class="informacoes-gerais-do-paciente">                  
+                  <div class="detalhes-collapse">
+                    <span class="titulo-collapse">Diário alimentar</span>
+                    <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
+                  </div>
+                </div>
+
+                <div class="footer-collapse-pacientes">
+                  <button id="botao-editar">
+                    <i class="ph ph-pencil-simple-line"></i>
+                    Editar
+                  </button>
+                  <button id="botao-excluir">
+                    <i class="ph ph-trash"></i>
+                    Excluir
+                  </button>
+                </div>
+
               </div>
             </li>
           </ul>
