--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
 
+    {% block main_css %} {% endblock %}
+
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
