--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,4 +1,12 @@
-{% extends "core/collapse.html" %} {% load static %} {% block main %}
+{% extends "core/collapse.html" %}
+
+{% load static %} 
+
+{% block main_css %}
+  <link rel="stylesheet" type="text/css" href="{% static 'estilos/estilo-main.css' %}" />
+{%endblock%}
+
+{% block main %}
 <main>
   <header>
     <nav class="breadcrumbs">
@@ -27,237 +35,6 @@
         Novo paciente
       </button>
     </div>
-
-    <ul id="collapse">
-      <li>
-        <label for="first">
-          <div class="informacoes-do-paciente">
-            <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
-            Paciente 1
-          </div>
-          <i class="ph ph-caret-down"></i>
-        </label>
-        <input type="radio" name="collapse" id="first" checked />
-
-        <div class="content">
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Nome</span>
-              <span class="dados-do-cliente">Paciente 1</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Email</span>
-              <span class="dados-do-cliente">paciente1@gmail.com</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">CPF</span>
-              <span class="dados-do-cliente">123.456.789-00</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Whatsapp</span>
-              <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-                <img src={% static 'imagens/icone-whatsapp.svg' %}
-                alt="icone-whatsapp"> Entrar em contato
-              </a>
-            </div>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Dieta</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-
-            <button id="botao-criar-dieta">
-              <i class="ph ph-plus"></i>
-              <span> Criar dieta </span>
-            </button>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Diário alimentar</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-          </div>
-
-          <div class="footer-collapse-pacientes">
-            <button id="botao-editar">
-              <i class="ph ph-pencil-simple-line"></i>
-              Editar
-            </button>
-            <button id="botao-excluir">
-              <i class="ph ph-trash"></i>
-              Excluir
-            </button>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <label for="second">
-          <div class="informacoes-do-paciente">
-            <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
-            Paciente 2
-          </div>
-
-          <i class="ph ph-caret-down"></i>
-        </label>
-        <input type="radio" name="collapse" id="second" />
-
-        <div class="content">
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Nome</span>
-              <span class="dados-do-cliente">Paciente 1</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Email</span>
-              <span class="dados-do-cliente">paciente1@gmail.com</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">CPF</span>
-              <span class="dados-do-cliente">123.456.789-00</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Whatsapp</span>
-              <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-                <img src={% static 'imagens/icone-whatsapp.svg' %}
-                alt="icone-whatsapp"> Entrar em contato
-              </a>
-            </div>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Dieta</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-
-            <button id="botao-criar-dieta">
-              <i class="ph ph-plus"></i>
-              <span> Criar dieta </span>
-            </button>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Diário alimentar</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-          </div>
-
-          <div class="footer-collapse-pacientes">
-            <button id="botao-editar">
-              <i class="ph ph-pencil-simple-line"></i>
-              Editar
-            </button>
-            <button id="botao-excluir">
-              <i class="ph ph-trash"></i>
-              Excluir
-            </button>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <label for="third">
-          <div class="informacoes-do-paciente">
-            <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
-            Paciente 3
-          </div>
-          <i class="ph ph-caret-down"></i>
-        </label>
-        <input type="radio" name="collapse" id="third" />
-
-        <div class="content">
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Nome</span>
-              <span class="dados-do-cliente">Paciente 1</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Email</span>
-              <span class="dados-do-cliente">paciente1@gmail.com</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">CPF</span>
-              <span class="dados-do-cliente">123.456.789-00</span>
-            </div>
-
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Whatsapp</span>
-              <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato">
-                <img src={% static 'imagens/icone-whatsapp.svg' %}
-                alt="icone-whatsapp"> Entrar em contato
-              </a>
-            </div>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Dieta</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-
-            <button id="botao-criar-dieta">
-              <i class="ph ph-plus"></i>
-              <span> Criar dieta </span>
-            </button>
-          </div>
-
-          <hr class="solid" />
-
-          <div class="informacoes-gerais-do-paciente">
-            <div class="detalhes-collapse">
-              <span class="titulo-collapse">Diário alimentar</span>
-              <span class="aguardando-acao"
-                >Aguardando resposta do formulário de pré-consulta</span
-              >
-            </div>
-          </div>
-
-          <div class="footer-collapse-pacientes">
-            <button id="botao-editar">
-              <i class="ph ph-pencil-simple-line"></i>
-              Editar
-            </button>
-            <button id="botao-excluir">
-              <i class="ph ph-trash"></i>
-              Excluir
-            </button>
-          </div>
-        </div>
-      </li>
-    </ul>
   </section>
 </main>
 {% endblock %}
