mudança de estrutura nos labels e inputs

--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -29,14 +29,18 @@
                 </svg>
                 <p id="label-de-cafe">Café da manhã</p>
             </div>
-            <label>Opção 1:</label>
-            <br>
-            <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
-            <br>
-            <label>Substituto:</label>
-            <br>
-            <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/> Vitamina (50kcal)
-            <br>
+            <div class="opcao-alimento">
+                <label>Opção 1:</label>
+                <br>
+                <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
+                <br>
+            </div>
+            <div class="opcao-alimento">
+                <label>Substituto:</label>
+                <br>
+                <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/> Vitamina (50kcal)
+                <br>
+            </div>
             <label>Opção 2:</label>
             <br>
             <input type="radio" name="opcao-2" value="Vitamina (50kcal)"/> Vitamina (50kcal)
