:hammer: isolar template e estilo do collapse

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,9 +17,12 @@
 
     <link rel="icon" type="image/x-icon" href="imagens/favicon.ico" />
 
-    <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo.css' %}" />
 
-    {% block main_css %} {% endblock %}
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-collapse.css' %}">
+
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-main.css' %}" />
+
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
