--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -29,25 +29,28 @@
                 </svg>
                 <p id="label-de-cafe">Café da manhã</p>
             </div>
-            <div class="opcao-alimento">
-                <label>Opção 1:</label>
-                <br>
-                <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
-                <br>
+            <div class="container-global-opcao">
+                <div class="container-opcao">
+                    <div class="opcao-alimento">
+                        <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/>
+                        <label><span>Opção 1:</span><span>Salada de frutas (50kcal)</span></label>
+                    </div>
+                    <div class="opcao-alimento">
+                        <input type="radio" name="opcao-2" value="Vitamina (50kcal)"/>
+                        <label><span>Opção 2:</span><span>Vitamina (50kcal)</span></label>
+                    </div>
+                </div>
+                <div class="container-opcao">
+                    <div class="opcao-alimento">
+                        <input type="radio" name="substituto-2" value="Salada de frutas (50kcal)"/>
+                        <label><span>Substituto:</span><span>Salada de frutas (50kcal)</span></label>
+                    </div>
+                    <div class="opcao-alimento">
+                        <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/>
+                        <label><span>Substituto:</span><span>Vitamina (50kcal)</span></label>
+                    </div>
+                </div>
             </div>
-            <div class="opcao-alimento">
-                <label>Substituto:</label>
-                <br>
-                <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/> Vitamina (50kcal)
-                <br>
-            </div>
-            <label>Opção 2:</label>
-            <br>
-            <input type="radio" name="opcao-2" value="Vitamina (50kcal)"/> Vitamina (50kcal)
-            <br>
-            <label>Substituto:</label>
-            <br>
-            <input type="radio" name="substituto-2" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
         </div>
         <div class="progresso-do-almoco">
             <div class="cafe-manha-icone">
@@ -56,21 +59,28 @@
                 </svg>
                 <p id="label-de-almoco">Almoço</p>
             </div>
-            <label>Opção 1:</label>
-            <br>
-            <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
-            <br>
-            <label>Substituto:</label>
-            <br>
-            <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/> Vitamina (50kcal)
-            <br>
-            <label>Opção 2:</label>
-            <br>
-            <input type="radio" name="opcao-2" value="Vitamina (50kcal)"/> Vitamina (50kcal)
-            <br>
-            <label>Substituto:</label>
-            <br>
-            <input type="radio" name="substituto-2" value="Salada de frutas (50kcal)"/> Salada de frutas (50kcal)
+            <div class="container-global-opcao">
+                <div class="container-opcao">
+                    <div class="opcao-alimento">
+                        <input type="radio" name="opcao-1" value="Salada de frutas (50kcal)"/>
+                        <label><span>Opção 1:</span><span>Salada de frutas (50kcal)</span></label>
+                    </div>
+                    <div class="opcao-alimento">
+                        <input type="radio" name="opcao-2" value="Vitamina (50kcal)"/>
+                        <label><span>Opção 2:</span><span>Vitamina (50kcal)</span></label>
+                    </div>
+                </div>
+                <div class="container-opcao">
+                    <div class="opcao-alimento">
+                        <input type="radio" name="substituto-1" value="Vitamina (50kcal)"/>
+                        <label><span>Substituto:</span><span>Vitamina (50kcal)</span></label>
+                    </div>
+                    <div class="opcao-alimento">
+                        <input type="radio" name="substituto-2" value="Salada de frutas (50kcal)"/> 
+                        <label><span>Substituto:</span><span>Salada de frutas (50kcal)</span></label>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="buttons-progresso">
             <button id="botao-cancelar" type="Cancelar">Cancelar</button>
