--- a/core/static/estilos/estilo.css
+++ b/core/static/estilos/estilo.css
@@ -128,11 +128,16 @@ body{
     font-size: 14px;
 }
 .linha-vertical{
-    width: 1px;
     height: 51px;
-    background: #F4F3F3;
+    color: #F4F3F3;
 }
 #main-diario,
 #conteudo-diario {
     margin: auto;
+}
+#main-diario{
+    max-width: 824px;
+}
+#main-diario p{
+    margin-bottom: 28px;
 }
