--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DietHub</title>
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+    <link rel="stylesheet" href="{% static 'estilos/estilo-diario.css' %}" />
   </head>
   {% block main %} {% endblock %}
 </html>
