--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DietHub</title>
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+    <link rel-"stylesheet" href="{% static 'estilos/estilo-registrar-progresso.css' %}" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
