estilização faltando inputs de caloria e porçao

--- a/core/templates/core/cadastrarAlimento.html
+++ b/core/templates/core/cadastrarAlimento.html
@@ -18,24 +18,31 @@
                 </defs>
             </svg>
         </div>
-        <label>Nome</label>
-        <br>
-        <input type="text" placeholder="Ex: Maçã" />
-        <br>
-        <label>Tipo</label>
-        <br>
-        <input type="text" placeholder="Ex: Proteína" />
-        <br>
-        <label>Calorias (em kcal)</label>
-        <br>
-        <input type="text" placeholder="Ex: 21" />
-        <br>
-        <label>Porção (em g)</label>
-        <br>
-        <input type="text" placeholder="Ex: 50kg" />
-        <br>
-        <input type="checkbox"/>É um alimento substituto
-        <div class="buttons-progresso">
+        <div class="labels-iniciais">
+            <label>Nome</label>
+            <br>
+            <input type="text" placeholder="Ex: Maçã" />
+            <br>
+            <label>Tipo</label>
+            <br>
+            <input type="text" placeholder="Ex: Proteína" />
+            <br>
+        </div>
+        <div class="row">
+            <label>Calorias (em kcal)</label>
+            <br>
+            <input type="text" placeholder="Ex: 21" />
+            <br>
+            <label>Porção (em g)</label>
+            <br>
+            <input type="text" placeholder="Ex: 50kg" />
+            <br>
+        </div>
+        <div class="checkbox-substituto"> 
+            <input type="checkbox"/> 
+            <span>É um alimento substituto</span>
+        </div>
+        <div class="buttons-cadastrar-alimento">
             <button id="botao-cancelar" type="Cancelar">Cancelar</button>
             <button id="botao-salvar" type="Salvar">Salvar</button>
         </div>
