--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -10,28 +10,23 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="imagens/favicon.ico" />
 
     <link rel="stylesheet" href="{% static 'core/estilos/estilo.css' %}" />
 
-    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-collapse.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-collapse.css' %}" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-main.css' %}" />
-
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/collapse-formularios.css' %}" />
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
   <body>
     <nav class="side-bar">
-      <a href="#" class="logo">
-        <img src={% static 'imagens/logo-diet-hub.svg' %} alt="Logo DietHub">
-      </a>
+      <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
       <ul>
         <li class="opcao-do-menu opcao-do-menu-atual">
@@ -42,9 +37,9 @@
         </li>
 
         <li class="opcao-do-menu">
-          <a href="#">
+          <a href="/meus-formularios">
             <i class="ph ph-notepad"></i>
-            <span> Formulários </span>
+            <span>Formulários</span>
           </a>
         </li>
 
@@ -70,6 +65,8 @@
         </li>
       </ul>
     </nav>
-    {% block main %} {% endblock %}
+    {% block main %}
+
+    {% endblock %}
   </body>
 </html>
