--- a/core/static/core/estilos/collapse-formularios.css
+++ b/core/static/core/estilos/collapse-formularios.css
@@ -26,7 +26,7 @@
     margin-bottom: 16px;
     border-radius: 10px;
     width: 100%;
-    max-width: 417px;
+    max-width: 617px;
     padding: 10px 13px;
 }
 
@@ -58,4 +58,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.resposta-aberta {
+    width: 100%;
+    max-width: 617px;
+}
+
+textarea {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #F4F3F3;
+    padding: 9px 10px;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
+    resize: none;
+    font-weight: 500;
+    color: black;
+}
+
+textarea::placeholder {
+    color: #A8A8A8;
+    font-weight: bold;
+}
+
+textarea:focus {
+    outline: #0C9A61 solid 1px;
 }
