--- a/core/templates/core/collapse-formularios.html
+++ b/core/templates/core/collapse-formularios.html
@@ -40,6 +40,19 @@
         </div>
 
         <hr class="solid" />
+
+        <div class="formulario">
+          <div class="perguntas">
+            <p class="descricao-pergunta">Pergunta 2</p>
+            <p class="pergunta">Você possui alergia a algum alimento?</p>
+          </div>
+
+          <div class="resposta-aberta">
+            <textarea name="alimentos-que-dao-alergia" id="alimentos-que-dao-alergia" cols="30" rows="5" placeholder="Resposta do paciente aqui"></textarea>
+          </div>
+        </div>
+
+        <hr class="solid" />
       </div>
     </li>
   </ul>
