--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,7 +30,7 @@
 
       <ul>
         <li class="opcao-do-menu opcao-do-menu-atual">
-          <a href="#">
+          <a href="/">
             <i class="ph ph-house-line"></i>
             <span>Home</span>
           </a>
